Add squares with colors -------------------------------------
-------------------------------------

--- a/index.html
+++ b/index.html
@@ -25,41 +25,30 @@
 
     <section class="godFatherBox">
         <div class="bundle">
-            <div class="colorSquare"></div>
-            <div class="colorSquare"></div>
-            <div class="colorSquare"></div>
-            <div class="colorSquare"></div>
+            <div class="colorSquare violet"></div>
+            <div class="colorSquare red"></div>
+            <div class="colorSquare pink"></div>
+            <div class="colorSquare blue"></div>
         </div>
         <div class="bundle">
-            <div class="colorSquare"></div>
-            <div class="colorSquare"></div>
-            <div class="colorSquare"></div>
-            <div class="colorSquare"></div>
+            <div class="colorSquare green"></div>
+            <div class="colorSquare red"></div>
+            <div class="colorSquare lightBlue"></div>
+            <div class="colorSquare brown"></div>
         </div>
         <div class="bundle">
-            <div class="colorSquare"></div>
-            <div class="colorSquare"></div>
-            <div class="colorSquare"></div>
-            <div class="colorSquare"></div>
+            <div class="colorSquare green"></div>
+            <div class="colorSquare blue"></div>
+            <div class="colorSquare brown"></div>
+            <div class="colorSquare pink "></div>
         </div>
         <div class="bundle">
+            <div class="colorSquare orange"></div>
             <div class="colorSquare"></div>
-            <div class="colorSquare"></div>
-            <div class="colorSquare"></div>
-            <div class="colorSquare"></div>
+            <div class="colorSquare violet"></div>
+            <div class="colorSquare lightBlue"></div>
         </div>
-        <div class="bundle">
-            <div class="colorSquare"></div>
-            <div class="colorSquare"></div>
-            <div class="colorSquare"></div>
-            <div class="colorSquare"></div>
-        </div>
-        <div class="bundle">
-            <div class="colorSquare"></div>
-            <div class="colorSquare"></div>
-            <div class="colorSquare"></div>
-            <div class="colorSquare"></div>
-        </div>
+     
     </section>
 
     <script src="java.js"></script>
